# media_extension

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
docs/: media-ai-bridge.postman_collection.json  openapi.json  openapi.yaml
docs/prd/: 2026-05-01-jimeng-image-automation.md
extension/: background.js  content-script.js  dashboard.html  dashboard.js  jimeng-steps.js  manifest.json  popup.html  popup.js
extension/content-handlers/: gpt.js  jimeng-image.js  jimeng-video.js
feishu/: config.py  parse_tushengshipin_prompts.py  parse_wenshengtu_prompts.py  prompt_sheet_parser.py
llm/: __init__.py  openai_client.py
local_bridge/: __init__.py  __main__.py  main.py  media_ai_client.py  server.py  single_task.py  utils.py
local_bridge/api/: schemas.py
local_bridge/cli/: commands.py
local_bridge/domain/: models.py  services.py
local_bridge/infrastructure/: events.py  media_ai_client.py  (+1 more)
prompts/: 03_模特图.md  04_定妆图.md  05_首帧图.md  06_文生视频提示词.md  06_文生视频提示词_01.md  07_动作库.md  08_即梦文生图  11_场景提取.md  21_动作提取.md  31_文生图提示词拆解.md  32_图生视频提示词拆解.md  workflow.md
scripts/: generate_docs.py  manage_gpt_image_queue.py  submit_jimeng_image.py  submit_jimeng_video.py  submit_media_ai_first_frame_images.py  submit_media_ai_model_images.py  submit_media_ai_style_images.py  test_watch.py
test_case/: 模特图.md
test_output/: media-ai-save.json
tests/: __init__.py  conftest.py  test_business_logic.py  test_data_structures.py  test_file_processing.py  test_http_layer.py  test_media_ai_client.py  test_utils.py
(+424 files in other folders)
