[project]
name = "gpt-image2"
version = "0.1.0"
description = "Utilities for GPT image workflows and Feishu prompt parsing."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.99.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[openai]>=0.7.4",
    "requests>=2.32.5",
]

[tool.uv]
package = false
